# cmd/api/authentication.go
@@ -1,0 +1,117 @@
+package main
+
+import (
+	"crypto/sha256"
+	"encoding/hex"
+	"fmt"
+	"net/http"
+	"socialone/internal/store"
+	"socialone/internal/mailer"
+
+	"github.com/google/uuid"
+)
+
+type RegisterUserPayload struct {
+    Username string `json:"username" validate:"required,max=100"`
+    Email    string `json:"email" validate:"required,email,max=255"`
+    Password string `json:"password" validate:"required,min=3,max=72"`
+}
+
+
+type UserWithToken struct{
+	*store.User
+	Token string	`json:"token"`
+}
+
+// RegisterUserHandler godoc
+//
+// @Summary Registers a user
+// @Description Registers a user and returns user details upon successful registration
+// @Tags authentication
+// @Accept json
+// @Produce json
+// @Param payload body RegisterUserPayload true "User credentials"
+// @Success 201 {object} UserWithToken "User registered"
+// @Failure 400 {object} error "Bad request"
+// @Failure 500 {object} error "Internal server error"
+// @Router /authentication/user [post]
+func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
+	var payload RegisterUserPayload
+	if err:= ReadJson(w,r,&payload); err!=nil {
+		app.badRequestResponse(w,r,err)
+		return
+
+	}
+	if err:=Validate.Struct(payload);err!=nil{
+		app.badRequestResponse(w,r,err)
+		return
+	}
+
+	user:= &store.User{
+		Username: payload.Username,
+		Email: payload.Email,
+
+	}
+	if err:= user.Password.Set(payload.Password);err!=nil {
+		 app.internalServerError(w,r,err)
+		 return
+	}
+
+
+	ctx:= r.Context()
+	plainToken:= uuid.New().String()
+
+	hash:= sha256.Sum256([]byte(plainToken))
+	hashToken:= hex.EncodeToString(hash[:])
+//store the user
+	err:= app.store.Users.CreateAndInvite(ctx, user,hashToken,app.config.mail.exp)
+	if err!=nil{
+		switch err{
+		case store.ErrDuplicateEmail:
+			app.badRequestResponse(w,r,err)
+		case store.ErrDuplicateUsername:
+			app.badRequestResponse(w,r,err)
+		default:
+			app.internalServerError(w,r,err )
+		}
+		return
+	}
+
+
+	userWithToken:= UserWithToken{
+		User: user,
+		Token: plainToken ,
+	}
+	activationURL:= fmt.Sprint("%s/confirm/%s",app.config.frontendURL,plainToken)
+	isProdEnv:= app.config.env=="production"
+	vars:= struct{
+		Username string
+
+		ActivationURL string
+	}{
+		Username: user.Username,
+		ActivationURL: activationURL,
+
+	}
+
+	err= app.mailer.Send(mailer.UserWelcomeTemplate,user.Username,user.Email,vars,!isProdEnv)
+	if err!=nil{
+		app.logger.Errorw("Error sending welcome email", "error", err)
+
+		if err:= app.store.Users.Delete(ctx, user.ID); err!=nil{
+			app.logger.Errorw("Error deleting user", "error", err)
+		}
+		app.internalServerError(w,r,err)
+		return
+
+
+	}
+
+
+	if err:= app.jsonResponse(w,http.StatusCreated,userWithToken); err!=nil{
+		app.internalServerError(w,r,err)
+	}
+
+
+
+}
