# cmd/api/users.go
@@ -11,7 +11,22 @@ import (
 
 type userKey string
 const userCtx userKey = "user"
-
+// GetUser godoc
+//
+//	@Summary		Fetches a user profile
+//	@Description	Fetches a user profile by ID
+//	@Tags			users
+//
+//	@Accept			json
+//	@Produce		json
+//
+//	@Param			id	path		int	true	"User ID"
+//	@Success		200	{object}	store.User
+//	@Failure		400	{object}	error
+//	@Failure		404	{object}	error
+//	@Failure		500	{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/{id} [get]
 func (app *application)getUserHandler(w http.ResponseWriter, r *http.Request){
 	user:= getUserFromContext(r)
 
@@ -25,8 +40,20 @@ type FollowUser struct {
 	UserID int64 `json:"user_id"`
 
 }
-
-
+// FollowUser godoc
+//
+// @Summary      Follows a user
+// @Description  Follows a user by ID
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        userID path int true "User ID to be followed"
+// @Success      204 "User followed"
+// @Failure      400  {object} error "Bad request"
+// @Failure      404  {object} error "User not found"
+// @Failure      500  {object} error "Internal server error"
+// @Security     ApiKeyAuth
+// @Router       /users/{userID}/follow [put]
 func (app *application)followUserHandler(w http.ResponseWriter, r *http.Request){
 	followerUser:= getUserFromContext(r)
 
@@ -60,7 +87,19 @@ func (app *application)followUserHandler(w http.ResponseWriter, r *http.Request)
 
 
 }
-
+// UnfollowUser godoc
+//
+// @Summary      Unfollows a user
+// @Description  Unfollows a user by ID
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        userID path int true "User ID to be unfollowed"
+// @Success      204 "User unfollowed"
+// @Failure      404  {object} error "User not found"
+// @Failure      400  {object} error "Bad request"
+// @Security     ApiKeyAuth
+// @Router       /users/{userID}/unfollow [put]
 func (app *application)unfollowUserHandler(w http.ResponseWriter, r *http.Request){
 	unfollowedUser:= getUserFromContext(r)
 
@@ -81,9 +120,37 @@ func (app *application)unfollowUserHandler(w http.ResponseWriter, r *http.Reques
 		app.internalServerError(w,r,err)
 
 	}
-
 }
+// ActivateUser godoc
+//
+// @Summary Activates/Register a user
+// @Description Activates/Register a user by invitation token
+// @Tags users
+// @Produce json
+// @Param token path string true "Invitation token"
+// @Success 204 {string} string "User activated"
+// @Failure 404 {object} error "User not found"
+// @Failure 500 {object} error "Internal server error"
+// @Security ApiKeyAuth
+// @Router /users/activate/{token} [put]
+func (app *application)activateUserHandler(w http.ResponseWriter, r *http.Request){
+	token:= chi.URLParam(r, "token")
+	err:= app.store.Users.Activate(r.Context(), token)
+	if err!=nil{
+		switch err{
+		case store.ErrNotFound:
+			app.NotFoundResponse(w,r, err)
+		default:
+			app.internalServerError(w,r,err)
+		}
+		return
+	}
+	if err:= app.jsonResponse(w, http.StatusNoContent,"");err!=nil{
+		app.internalServerError(w,r,err)
+	}
 
+	// Your handler logic here
+}
 
 func (app *application)userContextMiddleware(next http.Handler) http.Handler{
 	return http.HandlerFunc(func( w http.ResponseWriter, r *http.Request ) {
